
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowSoftInputMode="adjustPan|adjustResize"
    tools:context=".SignUpActivity" >

   <EditText
        android:id="@+id/edit_FirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_FirstName" >
    </EditText>

    <EditText
        android:id="@+id/edit_MiddleName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_FirstName"
        android:hint="@string/edit_MiddleName" >
    </EditText>

    <EditText
        android:id="@+id/edit_LastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_MiddleName"
        android:hint="@string/edit_LastName" >
    </EditText>

    <EditText
        android:id="@+id/edit_UserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_LastName"
        android:hint="@string/edit_UserName" >
    </EditText>

    <EditText
        android:id="@+id/edit_Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_UserName"
        android:hint="@string/edit_Password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_ConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_Password"
        android:hint="@string/edit_ConfirmPassword"
        android:inputType="textPassword"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_Street"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ConfirmPassword"
        android:hint="@string/edit_Street" >
    </EditText>

    <EditText
        android:id="@+id/edit_City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edit_Street"
        android:hint="@string/edit_City" >
    </EditText>

    <EditText
        android:id="@+id/edit_Zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_Street"
        android:layout_toRightOf="@id/edit_City"
        android:hint="@string/edit_Zip" >
    </EditText>

    <EditText
        android:id="@+id/edit_State"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edit_City"
        android:hint="@string/edit_State" >
    </EditText>

    <EditText
        android:id="@+id/edit_Country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_City"
        android:layout_toRightOf="@+id/edit_State"
        android:hint="@string/edit_Country" >
    </EditText>

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_State"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_SignUp" 
        android:onClick="signUp">
    </Button>


</RelativeLayout>
