<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textGII"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:gravity="right"
        android:text="@string/gii"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogIn"        
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
         android:textColor="@color/white"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_below="@+id/textGII"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
         >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/pass_word"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_centerVertical="true"
        android:text="@string/log_in" 
         android:textColor="@color/white"
        android:onClick="Login"/>

   

</RelativeLayout>