<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowSoftInputMode="adjustPan|adjustResize"
    tools:context=".ProfileActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_FirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_FirstName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edit_MiddleName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_FirstName"
                android:hint="@string/edit_MiddleName" >
            </EditText>

            <EditText
                android:id="@+id/edit_LastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_MiddleName"
                android:hint="@string/edit_LastName" >
            </EditText>

            <EditText
                android:id="@+id/edit_UserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_LastName"
                android:hint="@string/edit_UserName" >
            </EditText>

            <EditText
                android:id="@+id/edit_Password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_UserName"
                android:hint="Change Password"
                android:inputType="textPassword" >
            </EditText>

            <EditText
                android:id="@+id/edit_Street"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_Street" >
            </EditText>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edit_City"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/edit_City" >
                </EditText>

                <EditText
                    android:id="@+id/edit_Zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/edit_City"
                    android:hint="@string/edit_Zip" >
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edit_State"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/edit_State" >
                </EditText>

                <EditText
                    android:id="@+id/edit_Country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/edit_State"
                    android:hint="@string/edit_Country" >
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_Update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="Update" >
                </Button>

                <Button
                    android:id="@+id/btn_Submit"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:visibility="invisible"
                    android:text="Submit" >
                </Button>

                <Button
                    android:id="@+id/btn_Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@+id/btn_Update"
                    android:enabled="true"
                    android:visibility="invisible"
                    android:text="Cancel" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>