<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayMessageActivity" >

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hello"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/hello"
        android:layout_marginTop="59dp"
        android:onClick="OpenMap"
        android:text="@string/load_map" />

    <Button
        android:id="@+id/planBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hello"
        android:layout_alignRight="@+id/mapBtn"
        android:layout_below="@+id/hello"
        android:layout_marginTop="112dp"
        android:onClick="PlanItinerary"
        android:text="@string/plan" />

    <Button
        android:id="@+id/getbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/planBtn"
        android:layout_alignRight="@+id/planBtn"
        android:layout_centerVertical="true"
        android:onClick="sendRequest"
        android:text="GetRequest" />

    <Button
        android:id="@+id/postbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/getbtn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/getbtn"
        android:layout_marginBottom="66dp"
        android:onClick="PostData"
        android:text="Post User" />

    <TextView
        android:id="@+id/ResponseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/getbtn"
        android:layout_alignRight="@+id/getbtn"
        android:layout_below="@+id/getbtn"
        android:layout_marginTop="27dp"
        android:text="Empty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/postbtn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="57dp"
        android:text="Test" />

</RelativeLayout>